force-app/main/default/objects/LLC_BI__Contact_Demographic__c/LLC_BI__Contact_Demographic__c.object-meta.xml
<CustomObject>
    <description>This object stores additional contact information for demographic.</description>
    <label>Contact Demographic</label>
    <nameField>
        <label>Contact Demographic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Demographics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>