force-app/main/default/objects/LLC_BI__Contact_Demographic__c/fields/LLC_BI__American_Indian_Alaska_Native__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__American_Indian_Alaska_Native__c</fullName>
    <description>Users populate this optional text field to specify the applicant’s American Indian or Alaska Native race. By default, it is empty.</description>
    <inlineHelpText>Use this field to specify the applicant’s American Indian or Alaska Native race.</inlineHelpText>
    <label>American Indian or Alaska Native</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>