force-app/main/default/objects/LLC_BI__Contact_Demographic__c/fields/LLC_BI__Asian_Race__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Asian_Race__c</fullName>
    <description>Users populate this optional text field to specify the applicant’s Asian race. By default, it is empty.</description>
    <inlineHelpText>Use this field to specify the applicant’s Asian race.</inlineHelpText>
    <label>Asian Race</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>