force-app/main/default/objects/LLC_BI__Contact_Demographic__c/fields/LLC_BI__Black_African_American_Race__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Black_African_American_Race__c</fullName>
    <description>Users populate this optional text field to specify the applicant’s Black or African American race. By default, it is empty.</description>
    <inlineHelpText>Use this field to specify the applicant’s Black or African American race.</inlineHelpText>
    <label>Black or African American Race</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>