force-app/main/default/objects/LLC_BI__Contact_Demographic__c/fields/LLC_BI__Contact__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Contact__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <description>Users populate this optional lookup field to reference the Contact record to which an Contact Demographic record refers. By default, this field is blank.</description>
    <inlineHelpText>Enter the Contact record to which this Contact Demographic refers.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact Demographics</relationshipLabel>
    <relationshipName>Contact_Demographics</relationshipName>
    <type>Lookup</type>
</CustomField>