force-app/main/default/objects/LLC_BI__Contact_Demographic__c/fields/LLC_BI__Declined_To_Provide_Gender__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Declined_To_Provide_Gender__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Users select this optional checkbox field to indicate that the individual declined to provide their gender information. By default, it is false.</description>
    <inlineHelpText>Use this field to indicate the individual declined to provide their gender information.</inlineHelpText>
    <label>Declined to Provide Gender</label>
    <type>Checkbox</type>
</CustomField>