force-app/main/default/objects/LLC_BI__Contact_Demographic__c/fields/LLC_BI__Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Ethnicity__c</fullName>
    <description>Users populate this optional multi-select picklist field to indicate the applicant’s ethnicity. By default, it is empty.</description>
    <inlineHelpText>Select value(s) to indicate the applicant’s ethnicity.</inlineHelpText>
    <label>Ethnicity</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hispanic or Latino</fullName>
            </value>
            <value>
                <fullName>Cuban</fullName>
            </value>
            <value>
                <fullName>Mexican</fullName>
            </value>
            <value>
                <fullName>Puerto Rican</fullName>
            </value>
            <value>
                <fullName>Other Hispanic or Latino Ethnicity</fullName>
            </value>
            <value>
                <fullName>Not Hispanic or Latino</fullName>
            </value>
            <value>
                <fullName>Prefer not to answer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>