force-app/main/default/objects/LLC_BI__Contact_Demographic__c/fields/LLC_BI__Ethnicity_FF__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Ethnicity_FF__c</fullName>
    <description>Users populate this optional text field to specify the applicant’s ethnicity if they select Other Hispanic or Latino Ethnicity. By default, it is empty.</description>
    <inlineHelpText>Use this field to specify the applicant’s ethnicity if they select Other Hispanic or Latino Ethnicity.</inlineHelpText>
    <label>Ethnicity Free Form</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>