force-app/main/default/objects/LLC_BI__Contact_Demographic__c/fields/LLC_BI__Gender_FF__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Gender_FF__c</fullName>
    <description>Users populate this optional text field to specify the applicant’s gender. By default, it is empty.</description>
    <inlineHelpText>Use this field to specify the applicant’s gender.</inlineHelpText>
    <label>Gender Free Form</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>