force-app/main/default/objects/LLC_BI__Contact_Demographic__c/fields/LLC_BI__Pacific_Islander_Race__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Pacific_Islander_Race__c</fullName>
    <description>Users populate this optional text field to specify the applicant’s Pacific Islander race. By default, it is empty.</description>
    <inlineHelpText>Use this field to specify the applicant’s Pacific Islander race.</inlineHelpText>
    <label>Pacific Islander Race</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>