force-app/main/default/objects/LLC_BI__Contact_Demographic__c/fields/LLC_BI__Race__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Race__c</fullName>
    <description>Users populate this optional multi-select picklist field to indicate the applicant’s race. By default, it is empty.</description>
    <inlineHelpText>Select value(s) to indicate the applicant’s race.</inlineHelpText>
    <label>Race</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>American Indian or Alaska Native</fullName>
            </value>
            <value>
                <fullName>Asian</fullName>
            </value>
            <value>
                <fullName>Asian Indian</fullName>
            </value>
            <value>
                <fullName>Chinese</fullName>
            </value>
            <value>
                <fullName>Filipino</fullName>
            </value>
            <value>
                <fullName>Japanese</fullName>
            </value>
            <value>
                <fullName>Korean</fullName>
            </value>
            <value>
                <fullName>Vietnamese</fullName>
            </value>
            <value>
                <fullName>Other Asian Race</fullName>
            </value>
            <value>
                <fullName>Black or African American</fullName>
            </value>
            <value>
                <fullName>African American</fullName>
            </value>
            <value>
                <fullName>Ethiopian</fullName>
            </value>
            <value>
                <fullName>Haitian</fullName>
            </value>
            <value>
                <fullName>Jamaican</fullName>
            </value>
            <value>
                <fullName>Nigerian</fullName>
            </value>
            <value>
                <fullName>Somali</fullName>
            </value>
            <value>
                <fullName>Other Black or African American Race</fullName>
            </value>
            <value>
                <fullName>Native Hawaiian or Other Pacific Islander</fullName>
            </value>
            <value>
                <fullName>Guamanian or Chamorro</fullName>
            </value>
            <value>
                <fullName>Native Hawaiian</fullName>
            </value>
            <value>
                <fullName>Samoan</fullName>
            </value>
            <value>
                <fullName>Other Pacific Islander Race</fullName>
            </value>
            <value>
                <fullName>White</fullName>
            </value>
            <value>
                <fullName>Prefer not to answer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>